[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
regex = "1.11.1"
crossterm = "0.28.1"
ratatui = "0.29.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
itertools = "0.13.0"
nalgebra = "0.33.2"
